改成web项目，测试使用spring加载